# 10AcWeek4

./: .gitignore  ARCHIVIST_DOCUMENTATION.md  DAY_ONE_QUESTIONS_IMPLEMENTATION.md  FINAL_VERIFICATION.md  INTERIM_REPORT.md  OL_DATA_PLATFORM_VERIFICATION.md  README.md  RECONNAISSANCE.md  TRACER_DOCUMENTATION.md  ol-data-platform_DAY_ONE_OUTPUT.md  pyproject.toml
.cartography/: CODEBASE.md  cartography_trace.jsonl  day_one_questions.md  lineage_graph.json  onboarding_brief.md
.cartography/cartography_ol_data_platform/: lineage_graph.json
.cartography/semantic_index/: chroma.sqlite3
docs/: FINAL_REPORT.md  SPEC.md
src/: cli.py  orchestrator.py
src/agents/: archivist.py  hydrologist.py  navigator.py  semanticist.py  surveyor.py
src/analyzers/: dag_config_parser.py  python_dataflow.py  sql_lineage.py  tree_sitter_analyzer.py
src/graph/: knowledge_graph.py
src/models/: schema.py
src/utils/: README_LLM_BUDGET.md  incremental.py  llm_budget.py  tracer.py
test_output/: CODEBASE.md
test_repo/.cartography/: CODEBASE.md  cartography_trace.jsonl  module_graph.json
tests/: test_cross_language_lineage.py  test_day_one_questions.py  test_integration.py  test_llm_budget.py  test_semanticist.py  test_tracer.py
