[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Codebase intelligence system for brownfield repositories"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=25.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pyyaml>=6.0.3",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
