[project]
name = "brownfield-cartographer"
version = "0.1.0"
description = "Codebase intelligence system for brownfield repositories"
requires-python = ">=3.10"
dependencies = [
    "sqlglot>=25.0.0",
    "networkx>=3.0",
    "pydantic>=2.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "pyyaml>=6.0.3",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "litellm>=1.82.1",
    "tiktoken>=0.12.0",
    "scikit-learn>=1.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
